# cityPy

./: .gitignore
langchainTest/: test.py
luffy_pc/: package.json  pnpm-lock.yaml  vite.config.ts
luffy_pc/src/: App.vue
luffyapi/: README.md  manage.py  pyproject.toml  requirements.txt
luffyapi/luffyapi/: asgi.py  urls.py  wsgi.py
luffyapi/luffyapi/settings/: __init__.py  dev.py  prod.py
luffyapi/luffyapi/utils/: exceptions.py
numpySj/: test.py
pandasS/: Untitled.ipynb  pd_01.ipynb  plt_01.ipynb  tensorflow_test.ipynb  test.py  数据分析.ipynb  数据结构介绍.ipynb  重要的基本功能.ipynb
pandasS/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  pd_01-checkpoint.ipynb  tensorflow_test-checkpoint.ipynb  test-checkpoint.py  数据分析-checkpoint.ipynb  数据结构介绍-checkpoint.ipynb  重要的基本功能-checkpoint.ipynb
scrapySj/demos/: quotes_spider.py  test.py
scrapySj/tutorial/: boss.html  boss.json  wangyihr.html  wangyihrDetail.html
scrapySj/tutorial/tutorial/: settings.py
tensorflow/: Untitled.ipynb  Untitled2.ipynb  Untitled3.ipynb  beginner.ipynb  classification.ipynb  classification.py  keras-01.ipynb  keras-01.py  numpy-01.ipynb  plt-01.ipynb  t-imdb.py  t-mnist.py  t-reuters.py  t1.py
tensorflow/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  keras-01-checkpoint.ipynb  numpy-01-checkpoint.ipynb  plt-01-checkpoint.ipynb
wDemos/: a.txt  clock.py  decor.py  dict.py  douban.html  douban.py  flaskDemo.py  seleniumDemo.py  test.py  testIter.py  typingTest.py  unicode.py  vector2d.py
wDemos/myPackage/: __init__.py
wDemos/templates/: index.html
(+14 files in other folders)
